    d/p/viewSelector-Cancel-search-on-overview-hidden.patch,
    d/p/ubuntu/search-call-XUbuntuCancel-method-on-providers-when-no-dat.patch:
    - Add support for cancelling remote search providers when the overlay
      is closed (and actually stop searches when requested from UI, LP: #1756826)
  * debian/ubuntu.css:
    - use defined color for menu separators (LP: #1739931)

 -- Marco Trevisan (Treviño) <marco@ubuntu.com>  Wed, 05 Sep 2018 14:31:58 +0200

gnome-shell (3.28.3-0ubuntu0.18.04.2) bionic; urgency=medium

  * New upstream release (LP: #1718931, LP: #1782614)
  * debian/patches/30-remoteMenu-Prevent-the-shell-from-becoming-unrespons.patch,
    debian/patches/magnifier.js-Fix-zoom-juddering.patch,
    debian/patches/st-label-Unset-clutter-text-instance-on-disposal.patch,
    debian/patches/st-texture-cache-Don-t-add-NULL-textures-to-cache.patch,
    debian/patches/st-texture-cache-Save-cairo-surfaces-to-a-different-map.patch,
    debian/patches/ui-Theme-lookup-should-respect-XDG_DATA_DIRS.patch:
    - Drop patches applied on the 3.28 branch
  * debian/patches/js-fix-invalid-access-errors.patch:
    - Refreshed to reflect upstream changes
  * d/p/popupMenu-Don-t-handle-key-presses-directly-if-there-are-.patch
    -  Don't handle key presses directly if there are modifiers (LP: #1784671)
  * debian/patches/workspace-fix-repositioned-windows-in-activities.patch:
    - Cherry-pick from upstream 3.28 branch

 -- Marco Trevisan (Treviño) <marco@ubuntu.com>  Fri, 03 Aug 2018 07:18:24 +0100

gnome-shell (3.28.2-0ubuntu0.18.04.1) bionic; urgency=medium

  [ Olivier Tilloy ]
  * New upstream release (LP: #1775145)
    - fixes valid password rejection at login screen (LP: #1765261)
  * Drop patches applied upstream:
    - debian/patches/polkitAgent-Guard-against-repeated-close-calls.patch
    - debian/patches/popupMenu-Fix-wrong-call-to-clutter_actor_add_child.patch
    - debian/patches/workspaceThumbnail-initialize-porthole-based-on-workArea.patch